--- a/wiki/de/Release_notes_1.2.html
+++ b/wiki/de/Release_notes_1.2.html
@@ -171,9 +171,7 @@ See <a href="../Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for way
 <p><span id="Further_Sketcher_improvements"></span>
 </p>
 <h3><span class="mw-headline" id="Weitere_Sketcher-Verbesserungen">Weitere Sketcher-Verbesserungen</span></h3>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li>It is now possible to import B&eacute;zier and Offset curves as <span typeof="mw:File"><a href="../index.php?title=Sketcher_Projection.svg&amp;filetimestamp=20241129200338&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Projection.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Projection.html" title="Sketcher Projection">External geometry</a>. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/25144">Pull request #25144</a></li></ul>
-</div>
+<ul><li>Es ist nun m&ouml;glich, B&eacute;zier- und Versatz-Kurven als <span typeof="mw:File"><a href="../index.php?title=Sketcher_Projection.svg&amp;filetimestamp=20241129200338&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Projection.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/Sketcher_Projection.html" title="Sketcher Projection/de">externe Geometrie</a> zu importieren. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/25144">Pull-Request #25144</a></li></ul>
 <p><span id="Spreadsheet_Workbench"></span>
 </p>
 <h2><span class="mw-headline" id="Arbeitsbereich_Spreadsheet">Arbeitsbereich Spreadsheet</span></h2>
@@ -197,13 +195,13 @@ See <a href="../Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for way
 <h2><span class="mw-headline" id="Importieren_und_Exportieren">Importieren und Exportieren</span></h2>
 <!-- 
 NewPP limit report
-Cached time: 20260114170345
+Cached time: 20260114170440
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.056 seconds
-Real time usage: 0.136 seconds
-Preprocessor visited node count: 255/1000000
+CPU time usage: 0.057 seconds
+Real time usage: 0.081 seconds
+Preprocessor visited node count: 254/1000000
 Post&#8208;expand include size: 1368/2097152 bytes
 Template argument size: 462/2097152 bytes
 Highest expansion depth: 5/100
@@ -213,14 +211,14 @@ Unstrip post&#8208;expand size: 677/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   17.844      1 -total
- 44.47%    7.935      2 Template:Message
- 34.26%    6.114      1 Template:VeryImportantMessage
- 19.41%    3.463      1 Template:TOCright
- 15.78%    2.816      1 Template:FileName
+100.00%    4.472      1 -total
+ 46.35%    2.073      2 Template:Message
+ 28.06%    1.255      1 Template:VeryImportantMessage
+ 21.91%    0.980      1 Template:TOCright
+ 21.13%    0.945      1 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114170345 and revision id 1738442. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114170439 and revision id 1738444. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
