--- a/wiki/de/Release_notes_1.2.html
+++ b/wiki/de/Release_notes_1.2.html
@@ -38,16 +38,14 @@ See <a href="../Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for way
 </p>
 <h2><span class="mw-headline" id="Kernsystem_und_API">Kernsystem und API</span></h2>
 <h3><span class="mw-headline" id="Core">Core</span></h3>
-<div lang="en" dir="ltr" class="mw-content-ltr">
 <table cellpadding="5">
 <tbody><tr>
 <td><span typeof="mw:File"><a href="../index.php?title=AnnotationLabel_relnotes_1.2.png&amp;filetimestamp=20251125144303&amp;.html" class="mw-file-description"><img src="../File/AnnotationLabel_relnotes_1.2.png" decoding="async" width="384" height="212" class="mw-file-element" data-file-width="1323" data-file-height="731"></a></span>
 </td>
-<td>A command to add an Annotation Label to the last picked point in the 3D view was added.
-<p><a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/23673">Pull request #23673</a>
+<td>Es wurde ein Befehl hinzugef&uuml;gt, um dem zuletzt ausgew&auml;hlten Punkt in der 3D-Ansicht eine Anmerkung hinzuzuf&uuml;gen.
+<p><a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/23673">Pull-Request #23673</a>
 </p>
 </td></tr></tbody></table>
-</div>
 <p><span id="Further_Core_improvements"></span>
 </p>
 <h4><span class="mw-headline" id="Weitere_Core-Verbesserungen">Weitere Core-Verbesserungen</span></h4>
@@ -195,13 +193,13 @@ See <a href="../Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for way
 <h2><span class="mw-headline" id="Importieren_und_Exportieren">Importieren und Exportieren</span></h2>
 <!-- 
 NewPP limit report
-Cached time: 20260114170440
+Cached time: 20260114170553
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.057 seconds
-Real time usage: 0.081 seconds
-Preprocessor visited node count: 254/1000000
+CPU time usage: 0.044 seconds
+Real time usage: 0.070 seconds
+Preprocessor visited node count: 253/1000000
 Post&#8208;expand include size: 1368/2097152 bytes
 Template argument size: 462/2097152 bytes
 Highest expansion depth: 5/100
@@ -211,14 +209,14 @@ Unstrip post&#8208;expand size: 677/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    4.472      1 -total
- 46.35%    2.073      2 Template:Message
- 28.06%    1.255      1 Template:VeryImportantMessage
- 21.91%    0.980      1 Template:TOCright
- 21.13%    0.945      1 Template:FileName
+100.00%   10.732      1 -total
+ 49.60%    5.323      2 Template:Message
+ 32.77%    3.517      1 Template:VeryImportantMessage
+ 15.57%    1.671      1 Template:TOCright
+ 14.11%    1.514      1 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114170439 and revision id 1738444. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114170553 and revision id 1738446. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
