--- a/wiki/de/Release_notes_1.2.html
+++ b/wiki/de/Release_notes_1.2.html
@@ -21,11 +21,8 @@ See <a href="../Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for way
 <p>Previous FreeCAD release notes can be found in the <a href="../Feature_list.html#Release_notes" title="Feature list">Feature list</a>.
 </p>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>Placeholder for an eye-catching image selected by the admins from the <a rel="nofollow" class="external text" href="https://forum.freecad.org/viewforum.php?f=24">user showcases forum</a>.
-</p>
-</div>
-<p><span id="General"></span>
+<p>Platzhalter f&uuml;r ein auff&auml;lliges Bild, das von den Admins im <a rel="nofollow" class="external text" href="https://forum.freecad.org/viewforum.php?f=24">user showcases forum</a> ausgesucht wird.
+</p><p><span id="General"></span>
 </p>
 <h2><span class="mw-headline" id="Allgemeines">Allgemeines</span></h2>
 <p><span id="User_interface"></span>
@@ -193,13 +190,13 @@ See <a href="../Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for way
 <h2><span class="mw-headline" id="Importieren_und_Exportieren">Importieren und Exportieren</span></h2>
 <!-- 
 NewPP limit report
-Cached time: 20260114170553
+Cached time: 20260114170637
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.044 seconds
-Real time usage: 0.070 seconds
-Preprocessor visited node count: 253/1000000
+CPU time usage: 0.050 seconds
+Real time usage: 0.060 seconds
+Preprocessor visited node count: 252/1000000
 Post&#8208;expand include size: 1368/2097152 bytes
 Template argument size: 462/2097152 bytes
 Highest expansion depth: 5/100
@@ -209,14 +206,14 @@ Unstrip post&#8208;expand size: 677/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   10.732      1 -total
- 49.60%    5.323      2 Template:Message
- 32.77%    3.517      1 Template:VeryImportantMessage
- 15.57%    1.671      1 Template:TOCright
- 14.11%    1.514      1 Template:FileName
+100.00%    6.985      1 -total
+ 43.08%    3.009      2 Template:Message
+ 31.75%    2.218      1 Template:VeryImportantMessage
+ 21.36%    1.492      1 Template:TOCright
+ 17.45%    1.219      1 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114170553 and revision id 1738446. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114170637 and revision id 1738448. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
