--- a/wiki/de/Release_notes_1.2.html
+++ b/wiki/de/Release_notes_1.2.html
@@ -17,11 +17,8 @@ See <a href="../Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for way
 <p><b>FreeCAD 1.2</b> was released on <b>D Month Year</b>, get it from the <a href="../Download.html" title="Download">Download</a> page. This page lists all new features and changes.
 </p>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>Previous FreeCAD release notes can be found in the <a href="../Feature_list.html#Release_notes" title="Feature list">Feature list</a>.
-</p>
-</div>
-<p>Platzhalter f&uuml;r ein auff&auml;lliges Bild, das von den Admins im <a rel="nofollow" class="external text" href="https://forum.freecad.org/viewforum.php?f=24">user showcases forum</a> ausgesucht wird.
+<p>Fr&uuml;here FreeCAD-Versionshinweise k&ouml;nnen unter <a href="../de/Feature_list.html#Release_notes" title="Feature list/de">Funktionsliste</a> gefunden werden.
+</p><p>Platzhalter f&uuml;r ein auff&auml;lliges Bild, das von den Admins im <a rel="nofollow" class="external text" href="https://forum.freecad.org/viewforum.php?f=24">user showcases forum</a> ausgesucht wird.
 </p><p><span id="General"></span>
 </p>
 <h2><span class="mw-headline" id="Allgemeines">Allgemeines</span></h2>
@@ -190,13 +187,13 @@ See <a href="../Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for way
 <h2><span class="mw-headline" id="Importieren_und_Exportieren">Importieren und Exportieren</span></h2>
 <!-- 
 NewPP limit report
-Cached time: 20260114170637
+Cached time: 20260114170742
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.050 seconds
-Real time usage: 0.060 seconds
-Preprocessor visited node count: 252/1000000
+CPU time usage: 0.054 seconds
+Real time usage: 0.071 seconds
+Preprocessor visited node count: 251/1000000
 Post&#8208;expand include size: 1368/2097152 bytes
 Template argument size: 462/2097152 bytes
 Highest expansion depth: 5/100
@@ -206,14 +203,14 @@ Unstrip post&#8208;expand size: 677/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    6.985      1 -total
- 43.08%    3.009      2 Template:Message
- 31.75%    2.218      1 Template:VeryImportantMessage
- 21.36%    1.492      1 Template:TOCright
- 17.45%    1.219      1 Template:FileName
+100.00%    7.970      1 -total
+ 51.15%    4.077      2 Template:Message
+ 22.37%    1.783      1 Template:TOCright
+ 21.71%    1.730      1 Template:VeryImportantMessage
+ 18.98%    1.513      1 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114170637 and revision id 1738448. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114170742 and revision id 1738450. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
