--- a/wiki/de/Release_notes_1.2.html
+++ b/wiki/de/Release_notes_1.2.html
@@ -9,9 +9,7 @@ See <a href="../Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for way
 </p>
 </div>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<div id="itsstillfree" style="text-align:center; background: var(--background-color-neutral-subtle, #e0e0ee); border: 2px solid var(--border-color-warning, #bb7736); color: var(--color-base, #202122); padding: 0.5em clamp(1em, 5vw, 2em); margin: 1em clamp(1em, 6vw, 7em); word-break: normal; overflow-wrap: break-word;">All images on this page must use the <span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">_relnotes_1.2</span> suffix</div>
-</div>
+<div id="itsstillfree" style="text-align:center; background: var(--background-color-neutral-subtle, #e0e0ee); border: 2px solid var(--border-color-warning, #bb7736); color: var(--color-base, #202122); padding: 0.5em clamp(1em, 5vw, 2em); margin: 1em clamp(1em, 6vw, 7em); word-break: normal; overflow-wrap: break-word;">Alle Bilder auf dieser Seite m&uuml;ssen die Endung <span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">_relnotes_1.2</span> verwenden.</div>
 <div style="clear:right; margin-bottom: .5em; float: right; padding: .5em 0 .8em 1.4em; background: none;"><meta property="mw:PageProp/toc"></div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p><b>FreeCAD 1.2</b> was released on <b>D Month Year</b>, get it from the <a href="../Download.html" title="Download">Download</a> page. This page lists all new features and changes.
@@ -187,15 +185,15 @@ See <a href="../Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for way
 <h2><span class="mw-headline" id="Importieren_und_Exportieren">Importieren und Exportieren</span></h2>
 <!-- 
 NewPP limit report
-Cached time: 20260114170742
+Cached time: 20260114170826
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.054 seconds
-Real time usage: 0.071 seconds
-Preprocessor visited node count: 251/1000000
-Post&#8208;expand include size: 1368/2097152 bytes
-Template argument size: 462/2097152 bytes
+CPU time usage: 0.064 seconds
+Real time usage: 0.083 seconds
+Preprocessor visited node count: 250/1000000
+Post&#8208;expand include size: 1383/2097152 bytes
+Template argument size: 477/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -203,14 +201,14 @@ Unstrip post&#8208;expand size: 677/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    7.970      1 -total
- 51.15%    4.077      2 Template:Message
- 22.37%    1.783      1 Template:TOCright
- 21.71%    1.730      1 Template:VeryImportantMessage
- 18.98%    1.513      1 Template:FileName
+100.00%    8.626      1 -total
+ 39.63%    3.419      2 Template:Message
+ 31.86%    2.748      1 Template:VeryImportantMessage
+ 24.52%    2.115      1 Template:TOCright
+ 17.35%    1.497      1 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114170742 and revision id 1738450. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114170826 and revision id 1738452. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
