--- a/wiki/de/Release_notes_1.2.html
+++ b/wiki/de/Release_notes_1.2.html
@@ -2,12 +2,10 @@
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../Release_notes_1.2.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Release notes 1.2 (100% translated)" lang="en" dir="ltr">English</a></li></ul></div>
 <div class="warning-box">FreeCAD 1.2 ist in Entwicklung, es steht noch kein Ver&ouml;ffentlichungstermin fest.</div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
 <div id="itsstillfree" style="text-align:center; background: var(--background-color-neutral-subtle, #e0e0ee); border: 2px solid var(--border-color-warning, #bb7736); color: var(--color-base, #202122); padding: 0.5em clamp(1em, 5vw, 2em); margin: 1em clamp(1em, 6vw, 7em); word-break: normal; overflow-wrap: break-word;">
-<p>Are features missing? Mention them in the <a rel="nofollow" class="external text" href="https://forum.freecad.org/viewtopic.php?f=10&amp;t=101169">Release notes for v1.2</a> forum thread.<br>
-See <a href="../Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for ways to contribute to FreeCAD.
+<p>Fehlen Funktionen? Diese im Forum-Thread <a rel="nofollow" class="external text" href="https://forum.freecad.org/viewtopic.php?f=10&amp;t=101169">Release notes for v1.2</a> erw&auml;hnen.<br>
+Siehe <a href="../de/Help_FreeCAD.html" title="Help FreeCAD/de">FreeCAD unterst&uuml;tzen</a> f&uuml;r M&ouml;glichkeiten, um zu FreeCAD beizutragen.
 </p>
-</div>
 </div>
 <div id="itsstillfree" style="text-align:center; background: var(--background-color-neutral-subtle, #e0e0ee); border: 2px solid var(--border-color-warning, #bb7736); color: var(--color-base, #202122); padding: 0.5em clamp(1em, 5vw, 2em); margin: 1em clamp(1em, 6vw, 7em); word-break: normal; overflow-wrap: break-word;">Alle Bilder auf dieser Seite m&uuml;ssen die Endung <span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">_relnotes_1.2</span> verwenden.</div>
 <div style="clear:right; margin-bottom: .5em; float: right; padding: .5em 0 .8em 1.4em; background: none;"><meta property="mw:PageProp/toc"></div>
@@ -185,15 +183,15 @@ See <a href="../Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for way
 <h2><span class="mw-headline" id="Importieren_und_Exportieren">Importieren und Exportieren</span></h2>
 <!-- 
 NewPP limit report
-Cached time: 20260114170826
+Cached time: 20260114171105
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.064 seconds
-Real time usage: 0.083 seconds
-Preprocessor visited node count: 250/1000000
-Post&#8208;expand include size: 1383/2097152 bytes
-Template argument size: 477/2097152 bytes
+CPU time usage: 0.043 seconds
+Real time usage: 0.057 seconds
+Preprocessor visited node count: 249/1000000
+Post&#8208;expand include size: 1406/2097152 bytes
+Template argument size: 500/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -201,14 +199,14 @@ Unstrip post&#8208;expand size: 677/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    8.626      1 -total
- 39.63%    3.419      2 Template:Message
- 31.86%    2.748      1 Template:VeryImportantMessage
- 24.52%    2.115      1 Template:TOCright
- 17.35%    1.497      1 Template:FileName
+100.00%    4.784      1 -total
+ 44.65%    2.136      2 Template:Message
+ 30.75%    1.471      1 Template:VeryImportantMessage
+ 21.44%    1.026      1 Template:FileName
+ 19.69%    0.942      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114170826 and revision id 1738452. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114171105 and revision id 1738454. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
