--- a/wiki/de/Release_notes_1.2.html
+++ b/wiki/de/Release_notes_1.2.html
@@ -39,10 +39,8 @@ Siehe <a href="../de/Help_FreeCAD.html" title="Help FreeCAD/de">FreeCAD unterst&
 <p><span id="Further_Core_improvements"></span>
 </p>
 <h4><span class="mw-headline" id="Weitere_Core-Verbesserungen">Weitere Core-Verbesserungen</span></h4>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li>The search bar in the <span typeof="mw:File"><a href="../index.php?title=Std_DlgPreferences.svg&amp;filetimestamp=20240528092445&amp;.html" class="mw-file-description"><img src="../File/Std_DlgPreferences.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Std_DlgPreferences.html" title="Std DlgPreferences">Preferences</a> is now able to search through tooltips, dropdown values, checkboxes and group titles. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/24283">Pull request #24283</a></li>
-<li>The <span typeof="mw:File"><a href="../index.php?title=Std_Measure.svg&amp;filetimestamp=20240704211636&amp;.html" class="mw-file-description"><img src="../File/Std_Measure.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Std_Measure.html" title="Std Measure">Measure</a> tool now has the option to display the measured result of circular elements as diameter instead or radius. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/24853">Pull request #24853</a></li></ul>
-</div>
+<ul><li>Die Suchleiste in den<span typeof="mw:File"><a href="../index.php?title=Std_DlgPreferences.svg&amp;filetimestamp=20240528092445&amp;.html" class="mw-file-description"><img src="../File/Std_DlgPreferences.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/Std_DlgPreferences.html" title="Std DlgPreferences/de">Einstellungen</a> kann nun Tooltipps, Klapplisten-Werte, Kontrollk&auml;stchen und Gruppentitel durchsuchen. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/24283">Pull-Request #24283</a></li>
+<li>Das Werkzeug <span typeof="mw:File"><a href="../index.php?title=Std_Measure.svg&amp;filetimestamp=20240704211636&amp;.html" class="mw-file-description"><img src="../File/Std_Measure.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/Std_Measure.html" title="Std Measure/de">Messen</a> bietet nun die M&ouml;glichkeit, das Messergebnis von kreisf&ouml;rmigen Elementen statt als Radius als Durchmesser anzuzeigen. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/24853">Pull-Request #24853</a></li></ul>
 <h3><span class="mw-headline" id="API">API</span></h3>
 <p><span id="Removed_Python_API"></span>
 </p>
@@ -183,13 +181,13 @@ Siehe <a href="../de/Help_FreeCAD.html" title="Help FreeCAD/de">FreeCAD unterst&
 <h2><span class="mw-headline" id="Importieren_und_Exportieren">Importieren und Exportieren</span></h2>
 <!-- 
 NewPP limit report
-Cached time: 20260114171105
+Cached time: 20260114171423
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.043 seconds
-Real time usage: 0.057 seconds
-Preprocessor visited node count: 249/1000000
+CPU time usage: 0.048 seconds
+Real time usage: 0.063 seconds
+Preprocessor visited node count: 248/1000000
 Post&#8208;expand include size: 1406/2097152 bytes
 Template argument size: 500/2097152 bytes
 Highest expansion depth: 5/100
@@ -199,14 +197,14 @@ Unstrip post&#8208;expand size: 677/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    4.784      1 -total
- 44.65%    2.136      2 Template:Message
- 30.75%    1.471      1 Template:VeryImportantMessage
- 21.44%    1.026      1 Template:FileName
- 19.69%    0.942      1 Template:TOCright
+100.00%    4.605      1 -total
+ 46.19%    2.127      2 Template:Message
+ 29.44%    1.356      1 Template:VeryImportantMessage
+ 20.74%    0.955      1 Template:TOCright
+ 19.33%    0.890      1 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114171105 and revision id 1738454. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411178-0!canonical and timestamp 20260114171423 and revision id 1738456. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
