--- a/wiki/de/Assembly.html
+++ b/wiki/de/Assembly.html
@@ -28,11 +28,8 @@
 <ul><li>Das Werkzeug <span typeof="mw:File"><a href="../index.php?title=Std_TransformManip.svg&amp;filetimestamp=20240411193912&amp;.html" class="mw-file-description"><img src="../File/Std_TransformManip.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/Std_TransformManip.html" title="Std TransformManip/de">Std Bewegen</a> verwenden,</li>
 <li>Den Dialog <span typeof="mw:File"><a href="../index.php?title=Std_Placement.svg&amp;filetimestamp=20200107104731&amp;.html" class="mw-file-description"><img src="../File/Std_Placement.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/Std_Placement.html" title="Std Placement/de">Std Positionierung</a> verwenden</li>
 <li>Die Eigenschaft <a href="../de/Placement.html" title="Placement/de">Platzierung</a> direkt in der <a href="../de/Property_View.html" title="Property View/de">Eigenschaften-Ansicht</a> anpassen.</li></ul>
-<div class="mw-translate-fuzzy">
-<p>Es kann einer der <a href="../de/External_workbenches.html" title="External workbenches/de">externen Pseudo-Zusammenbau-Arbeitsbereiche</a> wie Lattice2, Manipulator, Part-o-magic oder WorkFeature verwendet werden, um Schnittpunkte zu ermitteln, Abst&auml;nde zu messen und Objekte auf die gew&uuml;nschte Weise zu verteilen.
-</p>
-</div>
-<p>Im Prinzip wurde das <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=Std_Part.svg&amp;filetimestamp=20240411203637&amp;.html" class="mw-file-description"><img src="../File/Std_Part.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/Std_Part.html" title="Std Part/de">Std Part</a></span>-Objekt so ausgelegt, dass es als Grundbaustein f&uuml;r die Erstellung von Baugruppen dient. Dieses Objekt wird verwendet, um mehrere <a href="../de/Body.html" title="Body/de">K&ouml;rper</a> zu gruppieren und sie zusammen als eine Einheit, d.h. als Unterbaugruppe, zu bewegen. Anschlie&szlig;end kann diese Unterbaugruppe neben oder innerhalb anderer Unterbaugruppen platziert werden, um die endg&uuml;ltige Baugruppe zu erstellen.
+<p>Es kann einer der <a href="../de/External_workbenches.html" title="External workbenches/de">externen Pseudo-Zusammenbau-Arbeitsbereiche</a>, wie <span typeof="mw:File"><a href="../index.php?title=Lattice2_workbench_icon.svg&amp;filetimestamp=20160611191139&amp;.html" class="mw-file-description"><img src="../File/Lattice2_workbench_icon.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/Lattice2_Workbench.html" title="Lattice2 Workbench/de">Lattice2</a>, <span typeof="mw:File"><a href="../index.php?title=Manipulator_workbench_icon.svg&amp;filetimestamp=20181001182959&amp;.html" class="mw-file-description"><img src="../File/Manipulator_workbench_icon.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/Manipulator_Workbench.html" title="Manipulator Workbench/de">Manipulator</a>, <a rel="nofollow" class="external text" href="https://github.com/DeepSOIC/Part-o-magic">Part-o-magic</a>, oder <span typeof="mw:File"><a href="../index.php?title=Workfeature_workbench_icon.svg&amp;filetimestamp=20200209045750&amp;.html" class="mw-file-description"><img src="../File/Workfeature_workbench_icon.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/Workfeature_Workbench.html" title="Workfeature Workbench/de">WorkFeature</a> verwendet werden, um einem dabei zu helfen, Schnittpunkte zu finden, Entfernungen zu messen und die Objekte wie gew&uuml;nscht zu verteilen.
+</p><p>Im Prinzip wurde das <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=Std_Part.svg&amp;filetimestamp=20240411203637&amp;.html" class="mw-file-description"><img src="../File/Std_Part.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/Std_Part.html" title="Std Part/de">Std Part</a></span>-Objekt so ausgelegt, dass es als Grundbaustein f&uuml;r die Erstellung von Baugruppen dient. Dieses Objekt wird verwendet, um mehrere <a href="../de/Body.html" title="Body/de">K&ouml;rper</a> zu gruppieren und sie zusammen als eine Einheit, d.h. als Unterbaugruppe, zu bewegen. Anschlie&szlig;end kann diese Unterbaugruppe neben oder innerhalb anderer Unterbaugruppen platziert werden, um die endg&uuml;ltige Baugruppe zu erstellen.
 </p><p><span id="Constrained_assembly"></span>
 </p>
 <h3><span class="mw-headline" id="Zusammenbau_mit_Randbedingungen">Zusammenbau mit Randbedingungen</span></h3>
@@ -116,13 +113,13 @@ Bitte beachten, dass <a href="../de/Assembly2_Workbench.html" title="Assembly2 W
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260114171718
+Cached time: 20260114172027
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.080 seconds
-Real time usage: 0.144 seconds
-Preprocessor visited node count: 357/1000000
+CPU time usage: 0.112 seconds
+Real time usage: 0.170 seconds
+Preprocessor visited node count: 362/1000000
 Post&#8208;expand include size: 31475/2097152 bytes
 Template argument size: 12339/2097152 bytes
 Highest expansion depth: 5/100
@@ -132,17 +129,17 @@ Unstrip post&#8208;expand size: 1544/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   31.924      1 -total
- 44.75%   14.287      1 Template:Std_Base_navi/de
- 35.83%   11.438      3 Template:Navigation_menu_2
- 34.15%   10.903      1 Template:Document_objects_navi/de
-  6.20%    1.980      1 Template:Userdocnavi/de
-  5.85%    1.866      1 Template:TOCright
-  4.02%    1.283      1 Template:Caption
-  3.16%    1.009      1 Template:Button
+100.00%   29.690      1 -total
+ 39.03%   11.589      1 Template:Std_Base_navi/de
+ 27.21%    8.078      3 Template:Navigation_menu_2
+ 24.31%    7.219      1 Template:Document_objects_navi/de
+ 11.37%    3.376      1 Template:Userdocnavi/de
+  8.25%    2.450      1 Template:Caption
+  7.69%    2.283      1 Template:TOCright
+  6.43%    1.910      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:199590-0!canonical and timestamp 20260114171717 and revision id 1738458. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:199590-0!canonical and timestamp 20260114172027 and revision id 1738460. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
